Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91479

When a TextField is inside a QQuickWidget that is in a QGraphicsProxyWidget then clicking the TextField will not give it focus and as such it is not possible to type in it

    XMLWordPrintable

Details

    • 8c0b1e06d9679676d12ff92db981198077eeda76 (qt/qtdeclarative/dev) db9adec4b1ef519edae7de793aa1db937abca24a (qt/qtdeclarative/6.2)

    Description

      When a TextField is inside a QQuickWidget that is in a QGraphicsProxyWidget then clicking the TextField will not give it focus and as such it is not possible to type in it. The reason that this is done this way is because an application is being progressively ported to QML and therefore in order to keep things mixed parts of it are in a QQuickWidget and parts are still on the graphicsview.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes